fix ending } and something after server block, add server_name, error page, body size and redirect

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -1,3 +1,7 @@
 server {
-    listen 01.0.0.0:65;
+    listen                  127.0.0.1:8000;
+    server_name             example.com test.fr;
+    error_page              404 500 403 /test.html;
+    client_max_body_size    128M;
+    return                  301 http://test.com;
 }
