--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -1,7 +1,22 @@
 server {
-    listen                  127.0.0.1:8000;
+    listen                  127.0.0.1:9000;
     server_name             example.com test.fr;
     error_page              404 500 403 /test.html;
+    error_page              400 502 /error2.html;
     client_max_body_size    128M;
     return                  301 http://test.com;
+    root                    /;
+    autoindex               on;
+    index                   index index.html;
+    upload_pass             /upload;
+    location   test  {
+        error_page              404 500 403 /test.html;
+        root                    test;
+    }
+}
+
+server {
+    listen 127.0.0.0.0.0;
+    server_name truc.fr;
+    root /;
 }
