check /path, parse method and cgi, insert server in sub, check mandatory directive and default if need, function to print conf gathered, can comment conf

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -1,6 +1,6 @@
 server {
-    listen                  127.0.0.1:9000;
-    server_name             example.com test.fr;
+    listen                  127.0.0.1:8000;
+    server_name             example.com www.example.com;
     error_page              404 500 403 /test.html;
     error_page              400 502 /error2.html;
     client_max_body_size    128M;
@@ -9,14 +9,30 @@ server {
     autoindex               on;
     index                   index index.html;
     upload_pass             /upload;
-    location   test  {
-        error_page              404 500 403 /test.html;
-        root                    test;
+    location    /test  {
+        error_page          404 500 403 /test.html;
+        root                test;
+        method              GET;
+    }
+    location    /exec {
+        cgi                 .php /usr/bin/php-cgi; 
     }
 }
 
 server {
-    listen 127.0.0.0.0.0;
-    server_name truc.fr;
+    listen 9000;
+    server_name mai nhi;
     root /;
 }
+
+server {
+    listen 8000;
+    server_name vo van tao;
+    root /;
+}
+
+# server {
+#     listen 127.0.0.10:8000;
+#     server_name eithan;
+#     root /eithan;
+# }
