--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -15,14 +15,16 @@ server {
         method              GET;
     }
     location    /exec {
-        cgi                 .php /usr/bin/php-cgi; 
+        cgi                 .php /usr/bin/php-cgi;
     }
 }
 
 server {
     listen 9000;
     server_name mai nhi;
-    root /;
+    location / {
+        root /mainhi;
+    }
 }
 
 server {
