--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -1,11 +1,11 @@
 server {
     listen                  127.0.0.1:8000;
     server_name             example.com www.example.com;
-    error_page              404 500 403 /test.html;
+    error_page              404 500 400 /test.html;
     error_page              400 502 /error2.html;
-    client_max_body_size    128M;
+    client_max_body_size    128m;
     return                  301 http://test.com;
-    root                    /;
+    root                    html;
     autoindex               on;
     index                   index index.html;
     upload_pass             /upload;
@@ -13,9 +13,10 @@ server {
         error_page          404 500 403 /test.html;
         root                test;
         method              GET;
+        return              301 coucou;
     }
     location    /exec {
-        cgi                 .php /usr/bin/php-cgi;
+        cgi                 .php /usr/bin/php-cgi ;
     }
 }
 
@@ -30,7 +31,26 @@ server {
 server {
     listen 8000;
     server_name vo van tao;
-    root /;
+    root vo/www;
+    error_page  404 /error404.html;
+    client_max_body_size 0;
+    return          300 vo;
+    # autoindex   on;
+    index   truc.html;
+    # upload_pass /pass;
+    # location / {
+    #     # root juste_vo;
+    #     # error_page  404 /error404.htm;
+    #     client_max_body_size 12m;
+    #     # return          302 justevo.com;
+    #     autoindex   on;
+    #     index   vo.html;
+    #     # upload_pass /pass222;
+    #     method      GET DELETE;
+    # }
+    location /bidule {
+
+    }
 }
 
 # server {
