fix location path, get cgi / error pages / autoindex / upload / index, tests on getters, remove root from mandatory, update conf files

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -1,60 +1,64 @@
 server {
-    listen                  127.0.0.1:8000;
-    server_name             example.com www.example.com;
-    error_page              404 500 400 /test.html;
-    error_page              400 502 /error2.html;
-    client_max_body_size    128m;
-    return                  301 http://test.com;
-    root                    html;
+    listen                  localhost:8000;
+    server_name             simple.com www.simple.com;
+
+    root                    test_config/simple;
+    index                   simple.html;
+
+    client_max_body_size    1m;
     autoindex               on;
-    index                   index index.html;
-    upload_pass             /upload;
-    location    /test  {
-        error_page          404 500 403 /test.html;
-        root                test;
+    error_page              404 /page404.html;
+
+    location    /get_only {
+        autoindex           off;
         method              GET;
-        return              301 coucou;
+
     }
+
+    location    /no_get {
+        method              POST DELETE;
+        error_page          404 /second_page404.html;
+    }
+
     location    /exec {
-        cgi                 .php /usr/bin/php-cgi ;
+        index               form.html;
+        cgi                 .php /usr/bin/php-cgi;
+    }
+
+    location    /return_page {
+        return              301 http://webserv.com;
+    }
+
+    location    /upload {
+        index               upload.html;
+        upload_pass         /;
+        client_max_body_size 32m;
     }
 }
 
 server {
-    listen 9000;
-    server_name mai nhi;
-    location / {
-        root /mainhi;
+    listen                  localhost:8000;
+    server_name             other_simple.com www.other_simple.com;
+
+    root                    test_config/simple;
+    index                   other_simple.html;
+
+    client_max_body_size    128m;
+    autoindex               off;
+    error_page              403 /page403.html;
+
+    location    /exec {
+        index               form.html;
+        cgi                 .py /usr/bin/python3;
+    }
+
+    location    /return_page {
+        return              301 http://other_webserv.com;
+    }
+
+    location    /upload {
+        index               other_upload.html;
+        upload_pass         /images;
+        client_max_body_size 1000m;
     }
 }
-
-server {
-    listen 8000;
-    server_name vo van tao;
-    root vo/www;
-    error_page  404 /error404.html;
-    client_max_body_size 0;
-    return          300 vo;
-    # autoindex   on;
-    index   truc.html;
-    # upload_pass /pass;
-    # location / {
-    #     # root juste_vo;
-    #     # error_page  404 /error404.htm;
-    #     client_max_body_size 12m;
-    #     # return          302 justevo.com;
-    #     autoindex   on;
-    #     index   vo.html;
-    #     # upload_pass /pass222;
-    #     method      GET DELETE;
-    # }
-    location /bidule {
-
-    }
-}
-
-# server {
-#     listen 127.0.0.10:8000;
-#     server_name eithan;
-#     root /eithan;
-# }
