NEED to fix getLocationPath and openFile_Body

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -1,6 +1,6 @@
 server {
-    listen                  localhost:8000;
-    server_name             simple.com www.simple.com;
+    listen                  127.0.0.1:8000;
+    server_name             simple.com www.simple.com 127.0.0.1:8000;
 
     root                    test_config/simple;
     index                   simple.html;
