change index behavior, need to redo location match

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -9,6 +9,9 @@ server {
     autoindex               on;
     error_page              404 /page404.html;
 
+    # location    /kapouet/truc/bidule {
+    #     root /tmp/www;
+    # }
     location    /get_only {
         autoindex           off;
         method              GET;
@@ -21,6 +24,7 @@ server {
     }
 
     location    /exec {
+        root                new/;
         index               form.html;
         cgi                 .php /usr/bin/php-cgi;
     }
