fix location path with particular root, add comments TODO, tests more

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -9,9 +9,9 @@ server {
     autoindex               on;
     error_page              404 /page404.html;
 
-    # location    /kapouet/truc/bidule {
-    #     root /tmp/www;
-    # }
+    location    /i {
+        root /data/w3;
+    }
     location    /get_only {
         autoindex           off;
         method              GET;
@@ -19,12 +19,13 @@ server {
     }
 
     location    /no_get {
+        root                new_root;
         method              POST DELETE;
         error_page          404 /second_page404.html;
     }
 
     location    /exec {
-        root                new/;
+        root                new;
         index               form.html;
         cgi                 .php /usr/bin/php-cgi;
     }
