--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -45,7 +45,7 @@ server {
     listen                  localhost:8000;
     server_name             other_simple.com www.other_simple.com;
 
-    root                    test_config/simple;
+    root                    test_config/other_simple;
     index                   other_simple.html;
 
     client_max_body_size    128m;
