--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -41,29 +41,29 @@ server {
     }
 }
 
-server {
-    listen                  localhost:8000;
-    server_name             other_simple.com www.other_simple.com;
+# server {
+#     listen                  localhost:8000;
+#     server_name             other_simple.com www.other_simple.com;
 
-    root                    test_config/other_simple;
-    index                   other_simple.html;
+#     root                    test_config/simple;
+#     index                   other_simple.html;
 
-    client_max_body_size    128m;
-    autoindex               off;
-    error_page              403 /page403.html;
+#     client_max_body_size    128m;
+#     autoindex               off;
+#     error_page              403 /page403.html;
 
-    location    /exec {
-        index               form.html;
-        cgi                 .py /usr/bin/python3;
-    }
+#     location    /exec {
+#         index               form.html;
+#         cgi                 .py /usr/bin/python3;
+#     }
 
-    location    /return_page {
-        return              301 http://other_webserv.com;
-    }
+#     location    /return_page {
+#         return              301 http://other_webserv.com;
+#     }
 
-    location    /upload {
-        index               other_upload.html;
-        upload_pass         /images;
-        client_max_body_size 1000m;
-    }
-}
+#     location    /upload {
+#         index               other_upload.html;
+#         upload_pass         /images;
+#         client_max_body_size 1000m;
+#     }
+# }
