Working on argv to be passed to execve. Path oh the php file need to be corrected.

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -24,8 +24,7 @@ server {
         error_page          404 /second_page404.html;
     }
 
-    location    /exec {
-        root                new;
+    location    / {
         index               form.html;
         cgi                 .php /usr/bin/php-cgi;
     }
