fix get servername, add autoindex function, fix autoindex and index behavior

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -3,17 +3,17 @@ server {
     server_name             simple.com www.simple.com 127.0.0.1:8000;
 
     root                    test_config/simple;
-    index                   simple.html;
+    # index                   simple.php;
 
     client_max_body_size    1m;
     autoindex               on;
-    error_page              404 /page404.html;
+    # error_page              404 /page404.html;
 
     location    /i {
         root /data/w3;
     }
     location    /get_only {
-        autoindex           off;
+        autoindex           on;
         method              GET;
 
     }
@@ -21,12 +21,13 @@ server {
     location    /no_get {
         root                new_root;
         method              POST DELETE;
-        error_page          404 /second_page404.html;
+        # error_page          404 /second_page404.html;
     }
 
     location    /exec {
-        root                new;
-        index               form.html;
+        autoindex           on;
+        # root                new;
+        # index               form.html;
         cgi                 .php /usr/bin/php-cgi;
     }
 
@@ -35,8 +36,9 @@ server {
     }
 
     location    /upload {
-        index               upload.html;
-        upload_pass         /;
+        autoindex           on;
+        # index               upload.html;
+        # upload_pass         /;
         client_max_body_size 32m;
     }
 }
