ADD a site for test

--- a/config_file/site1.conf
+++ b/config_file/site1.conf
@@ -6,8 +6,7 @@ server {
     index                   index.html;
 
     client_max_body_size    1m;
-    autoindex               on;
-    # error_page              404 /page404.html;
+    autoindex               off;
 
     location    /pouet {
         root website/redirection;
@@ -15,25 +14,20 @@ server {
 
     location    /truc {
         root website/redirection;
-        index
     }
 
 
     location    /get {
-        # autoindex           on;
         method              GET;
 
     }
 
     location    /no_get {
         method              POST DELETE;
-        # error_page          404 /second_page404.html;
     }
 
     location    /exec {
         autoindex           on;
-        # root                new;
-        # index               form.html;
         cgi                 .php /usr/bin/php-cgi;
     }
 
@@ -43,35 +37,6 @@ server {
 
     location    /upload {
         autoindex           on;
-        # index               upload.html;
-        # upload_pass         /;
         client_max_body_size 32m;
     }
 }
-
-# server {
-#     listen                  localhost:8000;
-#     server_name             other_simple.com www.other_simple.com;
-
-#     root                    test_config/simple;
-#     index                   other_simple.html;
-
-#     client_max_body_size    128m;
-#     autoindex               off;
-#     error_page              403 /page403.html;
-
-#     location    /exec {
-#         index               form.html;
-#         cgi                 .py /usr/bin/python3;
-#     }
-
-#     location    /return_page {
-#         return              301 http://other_webserv.com;
-#     }
-
-#     location    /upload {
-#         index               other_upload.html;
-#         upload_pass         /images;
-#         client_max_body_size 1000m;
-#     }
-# }
