--- a/html/two.conf
+++ b/html/two.conf
@@ -14,18 +14,18 @@ server {
 
 	location	/get_not_allowed {
 		method					POST DELETE;
-		index					index_no_get.html
+		index					index_no_get.html;
 	}
 
 	location	/delete {
 		autoindex				on;
-		root					html/one/delete;
+		root					html/two/delete;
 	}
 
 	location	/delete_not_allowed {
 		autoindex				on;
 		method					GET POST;
-		root					html/one/delete;
+		root					html/two/delete;
 	}
 
 	location	/upload {
