--- a/html/two.conf
+++ b/html/two.conf
@@ -2,7 +2,7 @@ server {
 	listen					localhost:8000;
 	server_name				webserv_upload.com www.webserv_upload.com;
 	root					html/two;
-	autoindex				on;
+	autoindex				off;
 	index					index.html;
 	client_max_body_size	1m;
 	error_page				400 /error_pages/400.html;
