--- a/html/two.conf
+++ b/html/two.conf
@@ -38,7 +38,7 @@ server {
 	location	/post_not_allowed {
 		method					GET DELETE;
 		client_max_body_size	50m;
-		root					/html/two/upload;
+		root					/html/two/upload/;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
 		upload_pass				/html/two/upload/;
