--- a/html/two.conf
+++ b/html/two.conf
@@ -32,31 +32,32 @@ server {
 		client_max_body_size	50m;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
-		upload_pass				/html/two/upload/;
+		upload_pass				html/two/upload/;
 	}
 
 	location	/post_not_allowed {
 		method					GET DELETE;
 		client_max_body_size	50m;
-		root					/html/two/upload/;
+		root					html/two/upload;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
-		upload_pass				/html/two/upload/;
-		# upload_pass				/html/two/upload/ set to location path if not present
+		upload_pass				html/two/upload/;
+		# upload_pass				html/two/upload/ set to location path if not present
+		# upload_pass				html/two/upload/ check without / at the end
 	}
 
 	location	/body_size_too_low {
 		client_max_body_size	100;
-		root					/html/two/upload;
+		root					html/two/upload;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
-		upload_pass				/html/two/upload/;
+		upload_pass				html/two/upload;
 	}
 
 	location	/no_cgi {
 		client_max_body_size	50m;
-		root					/html/two/upload;
+		root					html/two/upload;
 		index					upload.html;
-		upload_pass				/html/two/upload/;
+		upload_pass				html/two/upload;
 	}
 }
