Getting CGI to work.

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -24,7 +24,8 @@ server {
         error_page          404 /second_page404.html;
     }
 
-    location    / {
+    location    /exec {
+        root                new;
         index               form.html;
         cgi                 .php /usr/bin/php-cgi;
     }
