simple first fix on cgi

--- a/test_config/simple.conf
+++ b/test_config/simple.conf
@@ -24,9 +24,9 @@ server {
         error_page          404 /second_page404.html;
     }
 
-    location    /exec {
-        root                new;
-        index               form.html;
+    location    / {
+        # root                new;
+        index               index.php;
         cgi                 .php /usr/bin/php-cgi;
     }
 
