--- a/html/two.conf
+++ b/html/two.conf
@@ -19,7 +19,7 @@ server {
 
 	location	/delete {
 		autoindex				on;
-		root					html/two/delete;
+		root					html/two/upload/files;
 	}
 
 	location	/delete_not_allowed {
@@ -32,32 +32,32 @@ server {
 		client_max_body_size	50m;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
-		upload_pass				html/two/upload/;
+		upload_pass				files;
 	}
 
 	location	/post_not_allowed {
 		method					GET DELETE;
 		client_max_body_size	50m;
-		root					html/two/upload;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
-		upload_pass				html/two/upload/;
-		# upload_pass				html/two/upload/ set to location path if not present
-		# upload_pass				html/two/upload/ check without / at the end
+		upload_pass				files;
 	}
 
 	location	/body_size_too_low {
-		client_max_body_size	100;
-		root					html/two/upload;
+		client_max_body_size	1;
 		index					upload.html;
 		cgi						.php /usr/bin/php-cgi;
-		upload_pass				html/two/upload;
+		upload_pass				files;
 	}
 
 	location	/no_cgi {
 		client_max_body_size	50m;
-		root					html/two/upload;
 		index					upload.html;
-		upload_pass				html/two/upload;
+		upload_pass				files;
+	}
+
+	location	/files {
+		root					html/two/upload/files;
+		autoindex				on;
 	}
 }
