add websites and delete

--- a/html/three.conf
+++ b/html/three.conf
@@ -15,14 +15,14 @@ server {
 
 server {
 	listen					localhost:8081;
-	server_name				music.com www.music.com;
-	root					html/three/music;
+	server_name				forest.com www.forest.com;
+	root					html/three/forest;
 	index					index.html;
 }
 
 server {
 	listen					localhost:8082;
-	server_name				sport.com www.sport.com;
-	root					html/three/sport;
+	server_name				barber.com www.barber.com;
+	root					html/three/barber;
 	index					index.html;
 }
