This is the end, Goodjob my friends

--- a/html/one.conf
+++ b/html/one.conf
@@ -15,6 +15,7 @@ server {
 	location	/autoindex {
 		root					html/one;
 		autoindex				on;
+		cgi						.php /usr/bin/php-cgi;
 	}
 
 	location	/autoindex_off {
