--- a/html/two.conf
+++ b/html/two.conf
@@ -10,6 +10,7 @@ server {
 	error_page				403 /error_pages/403.html;
 	error_page				404 /error_pages/404.html;
 	error_page				405 /error_pages/405.html;
+	error_page				413 /error_pages/413.html;
 	error_page				500 /error_pages/500.html;
 
 	location	/get_not_allowed {
