Add multi cgi with py in cgi.cpp and reponseHTTP.cpp, clean some comments and useless spaces and change html files to support py

--- a/html/one.conf
+++ b/html/one.conf
@@ -10,6 +10,7 @@ server {
 	error_page				403 /error_pages/403.html;
 	error_page				404 /error_pages/404.html;
 	error_page				405 /error_pages/405.html;
+	error_page				413 /error_pages/413.html;
 	error_page				500 /error_pages/500.html;
 
 	location	/autoindex {
@@ -27,9 +28,10 @@ server {
 		return					301 /redirected/index.html;
 	}
 
-	location	/php {
+	location	/cgi-bin {
+		index					index.html;
 		cgi						.php /usr/bin/php-cgi;
-		index					index.php;
+		cgi						.py /usr/bin/python3;
 	}
 
 	location	/404_other {
