--- a/html/one.conf
+++ b/html/one.conf
@@ -17,6 +17,7 @@ server {
 		root					html/one;
 		autoindex				on;
 		cgi						.php /usr/bin/php-cgi;
+		cgi						.py /usr/bin/python3;
 	}
 
 	location	/autoindex_off {
